--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -6,6 +6,8 @@
   <div class="jumbotron">
     <h1>HERALDO HUERTA</h1>
     <p>Esta es mi primera aplicacion web en Rails</p>
+    <p> <spam class="font-weight-bold"> navbar-inverse </spam>  al parecer no es de la version 4 de bootstrap por lo cual </p>
+    <p>e decidio usar <spam class="font-weight-bold">navbar-dark bg-dark</spam> </p>
   </div>
   <p>Find me in app/views/pages/one.html.erb</p>
 </div>
